
2003-05-27	Joel Becker <joel.becker@oracle.com>

	* Preamble.make: Added.
	* Postamble.make: Added.
	* Makefile: Added.
	* libosm/Makefile: Added.
	* tools/Makefile: Added.
	* test/Makefile: Added.
	* test/osmtest.c: Change include <> to "" and OSMLIB_MAJOR, etc
		to VERSION.
	* test/osmtest-multi.c: Change include <> to "" and
		OSMLIB_MAJOR, etc to VERSION.
	* libosm/osmlib.c: Change OSMLIB_MAJOR, etc to VERSION
	* tools/osmtool.c: Change include <> to "" and OSMLIB_MAJOR,
		etc to VERSION.

2003-05-27	Joel Becker <joel.becker@oracle.com>

	* Makefile.orig: Moved Makefile out of the way.

2003-05-27	Joel Becker <joel.becker@oracle.com>

	* config.guess: Start of conversion to makebo.
	* config.sub: Start of conversion to makebo.
	* configure.in: Start of conversion to makebo.
	* Config.make.in: Start of conversion to makebo.
	* mkinstalldirs: Start of conversion to makebo.
	* install-sh: Start of conversion to makebo.

2003-05-24	Joel Becker <joel.becker@oracle.com>

	* include/asm-i386/osmstructures.h: Removed, no longer needed.
	* include/asm-i386/osmids.h: Remove id munging.
	* include/linux/osmabi.h: Define the ioctl ABI structures.
	* libosm/osmlib.c: Removed _private structures.  Use new ioctl
		ABI structures.
	* kernel/osm.c: Use the new ioctl ABI structures.

2003-05-24	Joel Becker <joel.becker@oracle.com>

	* include/asm-i386/osmids.h: Moved the ID mangling
	* kernel/osm.c: Updated ID mangling bits
	* libosm/osmlib.c: Updated ID mangling bits
	* include/linux/osmabi.c: Updated ID mangling bits

2003-05-15	Joel Becker <joel.becker@oracle.com>

	* *: Moved to subversion