@@ -47,3 +47,4 @@ KVER = @KVER@
 MODULEDIR = @MODULEDIR@
 MODVERSIONS = @MODVERSIONS@
 
+GCCINC = @GCCINC@
